fix banner inicial com skeleton mobile

--- a/src/app/esportes/futebol/default/listagem/futebol-listagem.component.css
+++ b/src/app/esportes/futebol/default/listagem/futebol-listagem.component.css
@@ -177,6 +177,7 @@ app-destaques {
 .loading-listagem .ld-campeonato .ld-jogo {
     display: flex;
     margin-bottom: 5px;
+    overflow: hidden;
 }
 
 .loading-listagem .ld-campeonato .ld-jogo .ld-data {
